# MERI-main

./: .env.example  .gitignore  README.md  WEB_APP_README.md  answer.json  compare_params.py  debug_first.html  debug_html_eng.html  debug_intermediate_format.html  debug_sorted.html  docker-compose.yml  export_excel.py  extract_params.py  img.mermaid  ocr_enhanced.html  ocr_original.html  output.json  output_chinese.json  output_qwen.json  output_result.json  params_list.txt  pyproject.toml  requirements.txt  run_web.bat  setup.sh  spec_database.json  table_text_keyvalue.html  test.ipynb  test_chinese_pdf.py  test_layout_enhancement.py  test_meri.py  test_multimodal_support.py  web_app.py  中文PDF处理指南.md  修改总结.md  函数调用说明.md  快速入门指南.md  最终实施总结.md  最终算法说明.md  算法修复说明.md  (+3 more)
.devcontainer/: devcontainer.json
.github/workflows/: notion-sync-action.yml  scorecard.yml
app/: app.py  statemanager.py  utils.py
docker/: dev.Dockerfile
docs/: 毕业设计-设计说明书-系统设计与实现.md
meri/: __init__.py  meri.py
new/: custom_schema_template.json  test_meri.py  从段落文本提取参数的优化指南.md  如何创建自定义Schema.md
output/: com110_az_02_04_1528.json  com_azure_01_28_1110.json  com_azure_01_28_1144.json  comparison_01_23_1426.json  comparison_01_26_1532.json  comparison_01_26_1543.json  ex110_az_02_04_1413.json  ex_azure_01_28_1057.json  extraction_01_22_1427.json  extraction_01_23_1411.json  extraction_01_26_1508.json  pdf_result.json  pdf_result_1_14.json  pdf_result_1_15.json  report_01_23_1427.xlsx  report_01_26_1544.xlsx  report_azure_01_28_1112.xlsx  report_azure_01_28_1144.xlsx  report_azure_02_04_1530.xlsx
(+16 files in other folders)
